force-app/main/default/objects/FundingDisbursement/FundingDisbursement.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>