force-app/main/default/objects/FundingDisbursement/fields/Approval_Step__c.field-meta.xml
<CustomField>
    <fullName>Approval_Step__c</fullName>
    <label>Approval Step</label>
    <length>30</length>
    <type>Text</type>
</CustomField>