force-app/main/default/objects/FundingDisbursement/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the approved Budget for this contract.</inlineHelpText>
    <label>Budget</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Budget.Contract__c</field>
            <operation>equals</operation>
            <valueField>$Source.Contract__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Budget</referenceTo>
    <relationshipLabel>Financial Activities</relationshipLabel>
    <relationshipName>Financial_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>