force-app/main/default/objects/FundingDisbursement/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>These funding disbursements are for this contract</inlineHelpText>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Financial Activity</relationshipLabel>
    <relationshipName>Funding_Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>