force-app/main/default/objects/FundingDisbursement/fields/DateofActivity__c.field-meta.xml
<CustomField>
    <fullName>DateofActivity__c</fullName>
    <label>Date of Activity</label>
    <type>Date</type>
</CustomField>