force-app/main/default/objects/FundingDisbursement/fields/EscrowAccount__c.field-meta.xml
<CustomField>
    <fullName>EscrowAccount__c</fullName>
    <label>Escrow Account #</label>
    <length>65</length>
    <type>Text</type>
</CustomField>