force-app/main/default/objects/FundingDisbursement/fields/FA_RollUp_DRLS__c.field-meta.xml
<CustomField>
    <fullName>FA_RollUp_DRLS__c</fullName>
    <description>Referenced in DLRS Roll-up criteria</description>
    <formula>TEXT(Type_of_Activity__c) != &apos;Program Reporting&apos; ||
 TEXT(Type_of_Activity__c) != &apos;Income&apos; || 
 TEXT(Type_of_Activity__c) != &apos;Recapture&apos;</formula>
    <inlineHelpText>Referenced in DLRS Roll-up criteria</inlineHelpText>
    <label>FA roll-up</label>
    <type>Checkbox</type>
</CustomField>