force-app/main/default/objects/FundingDisbursement/fields/Grantee_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Grantee_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grantee Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Financial Activities</relationshipLabel>
    <relationshipName>Financial_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>