force-app/main/default/objects/FundingDisbursement/fields/Max_Draw__c.field-meta.xml
<CustomField>
    <fullName>Max_Draw__c</fullName>
    <formula>IF( Contract_Type__c =&quot;CDAProgramatic&quot;,Contract__r.AvailableAmount__c,

Contract__r.AvailableAmount__c - Contract__r.X10_Holdback__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For Housing contracts this is the max at any Drawdown that can be requested until final inspection has been completed.</inlineHelpText>
    <label>Max Draw</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>