force-app/main/default/objects/FundingDisbursement/fields/Program_Monitor__c.field-meta.xml
<CustomField>
    <fullName>Program_Monitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Monitor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Financial_Activities1</relationshipName>
    <type>Lookup</type>
</CustomField>