force-app/main/default/objects/FundingDisbursement/fields/Project_Lead__c.field-meta.xml
<CustomField>
    <fullName>Project_Lead__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Contract__r.FiscalMonitor__c)),
    &quot;Program Monitor&quot;,
    IF(
        NOT(ISBLANK(Contract__r.Analyst__c)),
        &quot;Housing Analyst&quot;,
        &quot;&quot;
    )
)</formula>
    <label>Project Lead</label>
    <type>Text</type>
</CustomField>