force-app/main/default/objects/FundingDisbursement/fields/Project_Leadxx__c.field-meta.xml
<CustomField>
    <fullName>Project_Leadxx__c</fullName>
    <label>Project Leadxx</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Housing Analyst</fullName>
            </value>
            <value>
                <fullName>Program Monitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>