force-app/main/default/objects/FundingDisbursement/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <inlineHelpText>This is a sum of the categories related to this Financial Activity</inlineHelpText>
    <label>Total Amount</label>
    <summarizedField>Financial_Activity_Cost_Category__c.Amount__c</summarizedField>
    <summaryForeignKey>Financial_Activity_Cost_Category__c.Financial_Activity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>