force-app/main/default/objects/FundingDisbursement/validationRules/Draw_request_greater_than_Available.validationRule-meta.xml
<ValidationRule>
    <fullName>Draw_request_greater_than_Available</fullName>
    <active>true</active>
    <description>Stops users from requsting more than available</description>
    <errorConditionFormula>Total_Amount__c &gt; Max_Draw__c</errorConditionFormula>
    <errorMessage>Cannot request more than available.</errorMessage>
</ValidationRule>